// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gap[Base] should render correctly  1`] = `
<div
  class="c2sfsnh soui-gap-wrapper"
  style="margin-bottom: -8px; margin-right: -8px; width: 400px;"
>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 8px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about align 1`] = `
<div
  class="c-l9d8jw soui-radio-group"
>
  <div
    class="c-nntf3s soui-radio-wrapper c-i6mc3l soui-radio-wrapper-checked"
  >
    <input
      checked=""
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      flex-start
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      center
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      flex-end
    </span>
  </div>
  <div
    class="c-nntf3s soui-radio-wrapper"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="radio"
    />
    <span
      class="clsri3z soui-radio-indicator-wrapper"
    >
      <span
        class="c-kc4scc soui-radio-indicator"
        tabindex="1"
      />
    </span>
    <span
      class="c-j0ne9w soui-radio-desc"
    >
      baseline
    </span>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about custom 1`] = `
<div
  style="display: flex; align-items: center; margin-bottom: 16px;"
>
  <div
    style="width: 80px;"
  >
    column:
  </div>
  <div
    class="cr01j5u soui-slider-wrapper"
    style="flex: 1;"
  >
    <div
      class="c-45nbra soui-slider-track"
    >
      <div
        class="c-3k1h6s soui-slider-track-inner"
        style="left: 0%; right: 92%;"
      >
        <div
          class="caeyd4u soui-slider-indicator cmbwsfx soui-slider-indicator-end"
        />
        <div
          class="c-nldlkp soui-slider-end-value c-44ucrk soui-slider-value"
        >
          8
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Gap[Base] should render correctly about vertical 1`] = `
<div
  class="c2sfsnh soui-gap-wrapper"
  style="margin-bottom: -10px; margin-right: -8px; width: 400px; flex-direction: column;"
>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="coqmzh5 soui-gap-item"
    style="margin-bottom: 10px; margin-right: 8px;"
  >
    <button
      class="c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
</div>
`;
